--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		}
 		
 		#header-nav a:hover {
-			background-color: pink;
+			background-color: rgb(255, 230, 230);
   			color: black;
 		}
 		
@@ -86,7 +86,7 @@
 		
 		.content-block {
 			border: rgb(0, 34, 94) solid 5px;
-			background: pink;
+			background: rgb(255, 230, 230);
 			margin-left: 100px;
 			margin-right: 100px;
 		}
@@ -111,6 +111,7 @@
 		#social-media {
 			margin-left: auto;
   			margin-right: auto;
+			border-spacing: 15px;
 		}
 		#social-media td {
 			text-align: center;
@@ -188,7 +189,7 @@
 	</div>
 	<br>
 	<div id="footer">
-		<p style="color: white;">site created by House Council | updated 07 Jan 2023 11:04pm</p>
+		<p style="color: white;">site created by House Council | updated 08 Jan 2023 10:27am</p>
 	</div>
 </body>
 	
