--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 			font-family: "rockwell";
 			color: white;
 			text-align: right;
+			margin-right: 15px;
+			margin-bottom: 5px;
 		}
 		.header {
 			background-color: rgb(255, 251, 252);
@@ -52,10 +54,6 @@
 			font-size: 18px;
 			font-color: white;
 			text-align: center;
-		}
-		#sorbara-photo {
-			width: 500px;
-			border: solid 2px rgb(0, 34, 94);
 		}
 		#header-nav {
 			background-color: rgb(0, 34, 94);
@@ -97,6 +95,8 @@
 			font-family: rockwell;
 			text-align: center;
 			font-size: 30px;
+			margin-top: 5px;
+			margin-bottom: 5px;
 		}
 		.content-block ul {
 			font-size: 18px;
@@ -104,7 +104,7 @@
 		}
 		.inner-block {
 			background-color: white;
-			padding: 30px;
+			padding: 15px;
 			border-top: 5px solid rgb(0, 34, 94);
 			border-bottom: 5px solid rgb(0, 34, 94);
 		}
@@ -127,7 +127,7 @@
 			text-align: center; 
 			font-size: 30px; 
 			color: rgb(0, 34, 94);
-			font-family: rockwell, sans-serif;
+			font-weight: bold;
 		}
 	</style>
 </head>
