--- a/index.html
+++ b/index.html
@@ -32,21 +32,10 @@
 			text-align: center;
 			font-weight: bold;
 		}
-		.announcements {
-			background-color: rgb(255, 251, 252);
-			border: 5px ridge rgb(0, 34, 94);
-			height: 500 px;
-		}
-		.website-body {
-			background-color: rgb(255, 251, 252);
-			margins: auto;
-			border: solid 4px rgb(0, 34, 94);
-			padding: 2px;
-		}
 		#footer {
 			background-color: rgb(0, 34, 94);
 			height: 30 px:
-			bottom: 0px;
+			margin-bottom: 0px;
 			border: solid 4px rgb(0, 34, 94);
 		}
 		#footer p {
@@ -85,8 +74,8 @@
 		.content-block {
 			border: rgb(0, 34, 94) solid 5px;
 			background: rgb(255, 230, 230);
-			margin-left: 100px;
-			margin-right: 100px;
+			margin-left: 10%;
+			margin-right: 10%;
 		}
 		
 		.content-block h2 {
@@ -109,8 +98,8 @@
 			border-bottom: 5px solid rgb(0, 34, 94);
 		}
 		#social-media {
-			margin-left: auto;
-  			margin-right: auto;
+			margin-left: 10%;
+  			margin-right: 10%;
 			border-spacing: 15px 15px;
 		}
 		#social-media td {
