--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 			height: 30 px:
 			margin-bottom: 0px;
 			border: solid 4px rgb(0, 34, 94);
+			width: 100%;
 		}
 		#footer p {
 			font-family: rockwell;
