--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
 			background-color: #04AA6D;
 			color: white;
 		}
+		#photo {
+			width: 30%;
+		}
 		
 		.content-block {
 			border: rgb(0, 34, 94) solid 5px;
