--- a/index.html
+++ b/index.html
@@ -141,14 +141,15 @@
 	<div class="content-block" id="announcements">
 		<h2>Announcements:</h2>
 		<ul>
-			<li> Welcome back to residence! Residence will be open at 10:00am on January 8th (as will the Canada Room) </li>
+			<li> Thank you for your patience as the water issues in Sorbara are resolved.</li>
 		</ul>
 	</div>
 	<br>
 	<div class="content-block" id="events">
 		<h2>Upcoming events:</h2>
 		<ul>
-			<li>Residence reopens</li>
+			<li>Apple day - Thursday, January 12 at 8pm</li>
+			<li>House meeting - Sunday, January 15 at 8pm</li>
 		</ul>
 	</div>
 	<br>
@@ -179,7 +180,7 @@
 	</div>
 	<br>
 	<div id="footer">
-		<p style="color: white;">site created by House Council | updated 08 Jan 2023 3:59pm</p>
+		<p style="color: white;">site created by House Council | updated 11 Jan 2023 3:14pm</p>
 	</div>
 </body>
 	
